# rpki-aspa-test-data

./: .gitignore  LICENSE  Pipfile  README.md  pyproject.toml
.github/actions/pipenv/: action.yml
.github/workflows/: cicd.yml
rpki_aspa_test_data/: __init__.py  __main__.py  cases-schema.json  cli.py  data.py  test-cases.yml
